--- a/register.html
+++ b/register.html
@@ -17,10 +17,11 @@
             <input type="password" class="inputSenha" id="inserirSenha" placeholder="Insira sua senha...">
                 <div>
                     <button onclick="register()">registrar</button>
-                    <a href="login.html">voltar a tela de login</a>
+                    <a href="index.html">voltar a tela de login</a>
                 </div>
             </div>
         </section>
     <script src="script.js"></script>
 </body>
+
 </html>
